--- a/mydefinitions.tex
+++ b/mydefinitions.tex
@@ -152,6 +152,10 @@
    \definecolor{TAMustard}{HTML}{a1a100}
    \definecolor{Tangerine}{HTML}{d45500}
    
+   
+  \newcommand{\itempro}{\item[\textcolor{KYJade}{\Large \cmark}]}
+  \newcommand{\itemcontra}{\item[\textcolor{ARust}{\Large \xmark}]}
+   
    %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% The following definitions are to extend the LaTeX algorithmic 
 %% package with SWITCH statements and one-line structures.
