--- a/Class5LimitedCSIT.tex
+++ b/Class5LimitedCSIT.tex
@@ -471,7 +471,7 @@ Monday-Thursday 15:00-16:30\\
             \draw [draw] (rxant1) \antenna;
     \node [sum, right of=rxant1, node distance=.75cm, pin={[pinstyle, pin distance=.5cm]above:$\z$}] (sumacc) {$+$};
     \draw [draw,->,align=center] (rxant1) -- (sumacc);
-    \node [block, right of=sumacc, node distance=1.75cm, name=wf] {$\Gb_{\h}^H\Deltab_{(1,-1^*)}$};  
+    \node [block, right of=sumacc, node distance=1.75cm, name=wf] {$\Gb_{\h}^H\Delb_{(1,-1^*)}$};  
     \node [pinstyle, right of=wf, node distance=1.5cm, name=output] {$\rr$};  
     \draw[->] (sumacc) -- node {$\y$} (wf);
     \draw[->] (wf) -- (output);
@@ -629,7 +629,7 @@ Monday-Thursday 15:00-16:30\\
             \draw [draw] (rxant\a) \antenna;
             \node [sum, right of=rxant\a, node distance=.75cm, pin={[pinstyle, pin distance=.5cm]above:$z_i$}] (sumz\a) {$+$};
             \draw [draw,->,align=center] (rxant\a) -- (sumz\a);
-            \node [block, right of=sumz\a, node distance=2.5cm, name=wf\a] {$\Gb_{\h}^H\Deltab_{(1,-1^*)}$}; 
+            \node [block, right of=sumz\a, node distance=2.5cm, name=wf\a] {$\Gb_{\h}^H\Delb_{(1,-1^*)}$}; 
             \draw[->] (sumz\a) -- node {$\y_{\a}$} (wf\a);             
             \node [block, right of=wf\a, node distance=3cm, name=mrc\a] {$\w_\a^H$};
             \draw[->]  (wf\a) -- node {$\rr_{STC-\a}$} (mrc\a);             
@@ -647,7 +647,7 @@ Monday-Thursday 15:00-16:30\\
         \end{tikzpicture}
 \end{figure}
 \begin{itemize}
- \item Alamoutti decoding $\rr_{STC-j}=\Gb_{\h}^H\Deltab_{(1,-1^*)}\y_i=(|h_{j,1}|^2+|h_{j,2}|^2)\I\x =\|\h_j\|^2 \x$
+ \item Alamoutti decoding $\rr_{STC-j}=\Gb_{\h}^H\Delb_{(1,-1^*)}\y_i=(|h_{j,1}|^2+|h_{j,2}|^2)\I\x =\|\h_j\|^2 \x$
  \item MRC $\rr=\left(\begin{array}{c}r_1\\r_2\end{array}\right)=\frac{(\|\h_1\|^2)^*}{\|\Hb\|}\rr_{STC-1}+\frac{(\|\h_2\|^2)^*}{\|\Hb\|}\rr_{STC-2}$
  \item Equivalent Channel $\rr=\frac{\|\Hb\|^2}{\sqrt{2}}\I_2\x+\z'\to$ Array gain $2\times$, Diversity $4\times$. 
 \end{itemize}
@@ -870,7 +870,7 @@ The receiver knows $\Hb$, computes a prediction of performance for all $\V_i\in 
  \begin{itemize}
   \item Example: for MMSE linear $\W$, $\V_i$ for maximum SINR is
   $$\V_i^*=\arg \max_{\V_i\in\mathcal{V}_{CB}} \mathrm{SINR}(\V_i)=\arg \max_{\V_i\in\mathcal{V}_{CB}}\frac{P}{\sigma_z^2\left(\sum_{i=1}^{M}\frac{1}{\lambda_i(\Hb\V_i)+\frac{M\sigma_z^2}{P}}\right)}$$  
-  \item Example: $M=1$, Tx. Antenna Selection and M̀RC in this notation
+  \item Example: $M=1$, Tx. Antenna Selection and MRC in this notation
   $$\mathcal{V}=\left\{\left(\begin{array}{c}1\\0\\\vdots\\0\end{array}\right),\left(\begin{array}{c}0\\1\\\vdots\\0\end{array}\right),\dots,\left(\begin{array}{c}0\\0\\\vdots\\1\end{array}\right)\right\}\qquad \W=\frac{\h_{i^*}^H}{\|\h_{i^*}\|}$$
   \pagebreak
   \item Example: $M=1$, LOS Beamforming Codebook with Limited Feedback
